* re-arranging ranked1v1 tiles

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -1,5 +1,7 @@
 yes=Yes
 no=No
+percentage={0,number,#}%
+
 menu.login=Login
 menu.connect=Connect
 menu.support=Support
@@ -42,8 +44,12 @@ ranked1v1.ratingHint.high=Your rating is high. Why not help others to improve?
 ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowledge.
 ranked1v1.gamesPlayed=Games played
 ranked1v1.ranking=Your ranking
+ranked1v1.rankingOutOf=out of {0,number,#} players
 ranked1v1.ratingOver30Days=Your rating over 30 days
 ranked1v1.searching=Searching for opponent\u2026
+ranked1v1.winLossRation=Win/loss ration
+ranked1v1.score=Score
+ranked1v1.rankingFormat=#{0,number,#}
 
 hub.concurrentFafUsers48h=Concurrent FAF users (most recent 48h)
 hub.upcomingEvents=Upcoming events
