Started with mod vault

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -172,6 +172,12 @@ vault.mods=Mods
 vault.tutorials=Tutorials
 vault.replays=Replays
 
+modVault.recommendedMods=Recommended mods
+modVault.newestMods=Newest mods
+modVault.popularMods=Popular mods
+modVault.highestRatedMods=Highest rated mods
+
+
 map.name=Name
 map.description=Description
 map.size=Size
