--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -231,8 +231,7 @@ playerInfo.ratingOverTime=Rating over time
 playerInfo.ratingOverTime.last3Months=Last 3 months
 playerInfo.ratingOverTime.lastYear=Last year
 playerCardTooltipFormat={0} ({1,number,#})
-playerRatingFormat.global=Global Rating: {0,number,#}
-playerRatingFormat.ladder=Ladder Rating: {0,number,#}
+playerRatingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {0,number,#}
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
