Added icons to large map preview and hand to sidebar map preview

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -158,9 +158,8 @@ map.creator=Creator
 map.players=Players
 map.version=Version
 
-mapPreview.name=Map Name: {0}
-mapPreview.size=Map Size: {0}
-mapPreview.maxPlayers=Max Players: {0,number,#}
+mapPreview.size={0,number,#}km x {0,number,#}km
+mapPreview.maxPlayers={0,number,#} players
 mapPreview.loadFailure.title=Map Preview Load Failure
 mapPreview.loadFailure.message=The map preview has failed to load
 
