* Some google play things * Searching map vault

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -7,12 +7,15 @@ cancel=Cancel
 dismiss=Dismiss
 errorTitle=Uh oh!
 
+currentUser.logOut=Log out
+currentUser.connectGoogle=Connect to Google
+
 menu.login=Login
 menu.connect=Connect
 menu.support=Support
 menu.feedback=Feedback
-menu.logOut=Log out
 menu.exit=Exit
+menu.logOut=Log out
 menu.settings=Settings
 menu.help=Help
 
@@ -190,6 +193,8 @@ modVault.uninstall=Uninstall
 modVault.cancel=Cancel
 modVault.installationFailed=Mod '{0}' could not be installed: {1}
 modVault.couldNotDeleteMod=Mod '{0}' could not be deleted: {1}
+modVault.serverConnectionFailed=Connection to mod server failed
+modVault.searchResult=Search result
 
 mod.description=Description
 mod.comments=Comments
