#116 Loading and displaying achievements

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -294,10 +294,15 @@ loadingInstalledModsFailed.retry=Retry
 
 notifications.empty=You don't have any notifications
 
-playerInfo.ratingOverTime=Rating over time
-playerInfo.ratingOverTime.last3Months=Last 3 months
-playerInfo.ratingOverTime.lastYear=Last year
-playerInfoTooltipFormat={0} ({1,number,#})
+userInfo.ratingOverTime=Rating over time
+userInfo.ratingOverTime.last3Months=Last 3 months
+userInfo.ratingOverTime.lastYear=Last year
+userInfo.achievements=Achievements
+userInfo.googleConnectionRequired=In order to use achievements, you need to connect the client to  Google.
+userInfo.notUsingClient=This player is not using Downlord's FAF client. Why don't you tell him about it?
+userInfoTooltipFormat={0} ({1,number,#})
+
+achievement.stepsFormat={0,number,#}/{1,number,#}
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
