#116 HTTP response after Google success that closes itself

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -267,7 +267,7 @@ clientUpdateDownloadTask.title=Downloading client update\u2026
 requestNewGameTask.title=Hosting a new game\u2026
 requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
-readLadderTask.title=Reading ladder\u2026
+readLadderTask.title=Reading leaderboard\u2026
 mapDownloadTask.title=Downloading map {0}\u2026
 mapReplayTask.title=Downloading replay {0}\u2026
 prepareGameUpdateTask.preparing=Preparing game update\u2026
