displaying most recent achievement (wip)

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -303,6 +303,8 @@ userInfo.notUsingClient=This player is not using Downlord's FAF client. Why don'
 userInfoTooltipFormat={0} ({1,number,#})
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
+achievements.mostRecent=Most recent
+achievements.unlockedTotal=You have unlocked {0,number,#}/{1,number,#} ({2,number,#}%)
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
