Displaying achievements in user info window

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -7,8 +7,8 @@ cancel=Cancel
 dismiss=Dismiss
 errorTitle=Uh oh!
 
-currentUser.logOut=Log out
-currentUser.connectGoogle=Connect to Google
+userMenu.logOut=Log out
+currentUser.showProfile=Show profile
 
 menu.login=Login
 menu.connect=Connect
@@ -294,17 +294,20 @@ loadingInstalledModsFailed.retry=Retry
 
 notifications.empty=You don't have any notifications
 
+userInfo.connectGoogle=Connect to Google
 userInfo.ratingOverTime=Rating over time
 userInfo.ratingOverTime.last3Months=Last 3 months
 userInfo.ratingOverTime.lastYear=Last year
 userInfo.achievements=Achievements
-userInfo.googleConnectionRequired=In order to use achievements, you need to connect the client to  Google.
+userInfo.googleConnectionRequired=This feature is only available for testers. Ask Downlord if you'd like to participate.\nMax 50 testers allowed.
 userInfo.notUsingClient=This player is not using Downlord's FAF client. Why don't you tell him about it?
 userInfoTooltipFormat={0} ({1,number,#})
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
 achievements.mostRecent=Most recent
 achievements.unlockedTotal=You have unlocked {0,number,#}/{1,number,#} ({2,number,#}%)
+achievements.onlyForTesters=This feature is only available for testers. Ask Downlord if you'd like to participate.
+achievements.loading=Loading achievements\u2026
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
