Cleaned up some TODOs and FIXMEs

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -212,8 +212,7 @@ map.version=Version
 mapPreview.name=Map Name: {0}
 mapPreview.size=Map Size: {0}
 mapPreview.maxPlayers=Max Players: {0,number,#}
-mapPreview.loadFailure.title=Map Preview Load Failure
-mapPreview.loadFailure.message=The map preview has failed to load
+mapPreview.loadFailure.message=Map preview could not be loaded
 
 replays.loadingOnlineTask.title=Loading online replays\u2026
 replays.loadingOnlineTask.failed=Online replays could not be loaded.
