Hello native achievements & events

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -362,3 +362,5 @@ settings.fa.gamePort=Game port
 settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
 
 urlPreviewDescription={0} ({1})
+
+achievement.unlockedTitle=Achievement unlocked!
