* Fixing achievement API calls * Displaying locked achievement images gray and translucent * Adding description to most recent achievement

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -307,6 +307,8 @@ achievements.mostRecent=Most recent
 achievements.unlockedTotal=You have unlocked {0,number,#}/{1,number,#} ({2,number,#}%)
 achievements.onlyForTesters=This feature is only available for testers. Ask Downlord if you'd like to participate.
 achievements.loading=Loading achievements\u2026
+achievements.unlocked=Unlocked
+achievements.open=Open
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
