Fixing win/loss ratio"n" typo

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -59,7 +59,7 @@ ranked1v1.ranking=Your ranking
 ranked1v1.rankingOutOf=out of {0,number,#} players
 ranked1v1.ratingOver30Days=Your rating over 30 days
 ranked1v1.searching=Searching for opponent\u2026
-ranked1v1.winLossRation=Win/loss ration
+ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.score=Score
 ranked1v1.rankingFormat=#{0,number,#}
 
