FAF OAuth and achievements API

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -304,11 +304,13 @@ userInfoTooltipFormat={0} ({1,number,#})
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
 achievements.mostRecent=Most recent
-achievements.unlockedTotal=You have unlocked {0,number,#}/{1,number,#} ({2,number,#}%)
 achievements.onlyForTesters=This feature is only available for testers. Ask Downlord if you'd like to participate.
 achievements.loading=Loading achievements\u2026
 achievements.unlocked=Unlocked
 achievements.open=Open
+achievements.sortBy=Sort by
+achievements.unlockedOfTotal={0}/{1}
+achievements.earnedOfTotal={0}/{1}
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
