--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -280,7 +280,7 @@ settings.chat.maxMessages=Maximum number of messages to buffer
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
-settings.chat.prettyColors=Random pretty colors for other and irc users
+settings.chat.randomColors=Random pretty colors for other and irc users
 settings.notifications=Notifications
 settings.notifications.reset=Reset dismissed notifications
 settings.notifications.toasts=Toasts
