color logic rework

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -91,7 +91,7 @@ chat.category.moderators=Moderators
 chat.category.friends=Friends
 chat.category.foes=Foes
 chat.category.others=Others
-chat.category.irc=IRC only
+chat.category.chatOnly=Chat only
 chat.userContext.userInfo=Show user info
 chat.userContext.privateMessage=Send private message
 chat.userContext.addFriend=Add friend
@@ -300,7 +300,7 @@ playerInfo.ratingOverTime=Rating over time
 playerInfo.ratingOverTime.last3Months=Last 3 months
 playerInfo.ratingOverTime.lastYear=Last year
 playerCardTooltipFormat={0} ({1,number,#})
-playerRatingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {0,number,#}
+playerRatingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
