--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -341,6 +341,8 @@ settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
 settings.chat.randomColors=Random pretty colors for other and irc users
+settings.chat.miscellaneous=Miscellaneous options
+settings.chat.hideFoe=Hide foe messages
 settings.notifications=Notifications
 settings.notifications.reset=Reset dismissed notifications
 settings.notifications.toasts=Toasts
