Custom colors fully working!

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -97,6 +97,7 @@ chat.category.others=Others
 chat.category.chatOnly=Chat only
 chat.userContext.userInfo=Show user info
 chat.userContext.privateMessage=Send private message
+chat.userContext.removeColor=Remove custom color
 chat.userContext.addFriend=Add friend
 chat.userContext.removeFriend=Remove friend
 chat.userContext.addFoe=Add foe
@@ -340,7 +341,10 @@ settings.chat.maxMessages=Maximum number of messages to buffer
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
-settings.chat.randomColors=Random pretty colors for other and irc users
+settings.chat.colorMode=Chat user color mode
+settings.chat.colorMode.custom=Custom
+settings.chat.colorMode.random=Random
+settings.chat.colorMode.default=Default
 settings.chat.miscellaneous=Miscellaneous options
 settings.chat.hideFoe=Hide foe messages
 settings.notifications=Notifications
