Adapting upcoming server changes * Protocol Changes * Achievements that will be processed by the server

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -150,7 +150,7 @@ game.join=Join
 game.cancel=Cancel
 game.host=Host
 game.access=Access
-game.tooltip.teamTitle=Team {0,number,#}
+game.tooltip.teamTitle=Team %s
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
 
