gameStatusTooltip, privateChatTab test coverage!

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -309,10 +309,8 @@ userInfo.ratingOverTime.lastYear=Last year
 userInfo.achievements=Achievements
 userInfo.googleConnectionRequired=This feature is only available for testers. Ask Downlord if you'd like to participate.\nMax 50 testers allowed.
 userInfo.notUsingClient=This player is not using Downlord's FAF client. Why don't you tell him about it?
-userInfoTooltipFormat={0} ({1,number,#})
-
-playerCardTooltipFormat={0} ({1,number,#})
-playerRatingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
+userInfo.tooltipFormat={0} ({1,number,#})
+userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
 achievements.mostRecent=Most recent
