Mod vault now reads faf-api And uses identicons for missing mod images

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -183,10 +183,10 @@ vault.replays=Replays
 modVault.searchPrompt=Search\u2026
 modVault.title=Mod vault
 modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game's logic and therefore need to be installed by all participants. They can only be used in custom games.
-modVault.recommendedUidMods=Recommended UI mods
 modVault.newestMods=Newest mods
 modVault.popularMods=Popular mods
-modVault.highestRatedMods=Highest rated mods
+modVault.mostLikedMods=Most liked mods
+modVault.recommendedUidMods=Recommended UI mods
 modVault.install=Install
 modVault.uninstall=Uninstall
 modVault.cancel=Cancel
