Mod vault improvements

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -194,6 +194,7 @@ modVault.installationFailed=Mod '{0}' could not be installed: {1}
 modVault.couldNotDeleteMod=Mod '{0}' could not be deleted: {1}
 modVault.serverConnectionFailed=Connection to mod server failed
 modVault.searchResult=Search result
+modVault.loadingMods=Loading mods\u2026
 
 mod.description=Description
 mod.comments=Comments
