search irc chat

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -117,6 +117,7 @@ chat.mapName=Map Name: {0}
 chat.gameStatus.mapName=Map Name: {0}
 chat.gameStatus.gameTitle=Title: {0}
 chat.gameStatus.featuredMod=Featured Mod: {0}
+chat.search=Search in channel
 
 games.create=Create game
 games.create.minRating=Min.
