Fixing initial map selection

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -140,6 +140,7 @@ game.create.searchMap=Search\u2026
 game.create.gameType=Game type
 game.create.mapInfo=Map info
 game.create.mods=Mods
+game.create.titleMissing=Title is missing
 
 game.title=Title
 game.players=Players
