Properly parsing LUA files (with yenon :-)) #74

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -159,7 +159,6 @@ game.create.reload=Reload
 game.create.create=Create
 game.create.searchMap=Search\u2026
 game.create.gameType=Game type
-game.create.mapInfo=Map info
 game.create.mods=Mods
 game.create.titleMissing=Title is missing
 game.create.connectivityCheckPending=Checking connectivity\u2026
@@ -256,7 +255,7 @@ map.players=Players
 map.version=Version
 
 mapPreview.name=Map Name: {0}
-mapPreview.size=Map Size: {0}
+mapPreview.size=Map Size: {0,number,#}km x {1,number,#}km
 mapPreview.maxPlayers=Max Players: {0,number,#}
 mapPreview.loadFailure.message=Map preview could not be loaded
 
