--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -68,12 +68,13 @@ hub.donationWall=Donation wall
 hub.recentForumPosts=Recent forum posts
 hub.mostActivePlayers=Most active players
 
-statusBar.portReachable=Port check OK
-statusBar.portUnreachable=Port not reachable
-statusBar.portCheckFailed=Port check failed
-statusBar.ircConnected=IRC connected
-statusBar.ircConnecting=Connecting to IRC\u2026
-statusBar.ircDisconnected=Connecting to IRC\u2026
+statusBar.connectivityPublic=Public connection
+statusBar.connectivityStun=Proxy connection
+statusBar.portUnreachable=Port unreachable
+statusBar.connectivityUnknown=Connectivity unknown
+statusBar.chatConnected=Chat connected
+statusBar.chatConnecting=Connecting to chat\u2026
+statusBar.chatDisconnected=Chat disconnected
 statusBar.fafConnected=FAF connected
 statusBar.fafConnecting=Connecting to FAF\u2026
 statusBar.fafDisconnected=FAF disconnected
@@ -151,6 +152,8 @@ game.create.gameType=Game type
 game.create.mapInfo=Map info
 game.create.mods=Mods
 game.create.titleMissing=Title is missing
+game.create.connectivityCheckPending=Checking connectivity\u2026
+game.create.portUnreachable=Game port unreachable
 game.create.failed=Game could not be created.
 
 game.title=Title
@@ -256,9 +259,9 @@ tutorial.title=Title
 tutorial.length=Length
 tutorial.description=Description
 
-irc.connecting.message=Connecting to IRC\u2026
-irc.identificationFailed=IRC identification failed: {0}
-irc.registrationFailed=IRC registration failed: {0}
+chat.connecting.message=Connecting to chat\u2026
+chat.identificationFailed=Chat identification failed: {0}
+chat.registrationFailed=Chat registration failed: {0}
 
 faUpdateAvailable.notification=A Forged Alliance update is available
 faUpdateAvailable.updateNow=Update now
