--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -88,6 +88,9 @@ statusBar.rankedMatchNotification=Play 1v1
 
 news.authoredFormat={0} on {1,date}
 
+chat.noOpenChats=No chats are open
+chat.joinAChannel=Join a channel
+chat.channelNamePrompt=e.g. #aeolus
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
 chat.category.moderators=Moderators
