Working on automatic oauth

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -34,6 +34,9 @@ main.vault.replays=Replays
 main.leaderboard=Leaderboard
 main.leaderboard.ranked1v1=1v1 ranked matches
 
+leaderboard.failedToLoad=Leaderboard could not be loaded
+leaderboard.loading=Loading leaderboard\u2026
+
 ranked1v1.players=Players
 ranked1v1.play=Play
 ranked1v1.cancel=Cancel
