Improving game overview Closes #174

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -139,10 +139,10 @@ chat.filter.gameStatus.none=None
 games.create=Create game
 games.create.minRating=Min.
 games.create.maxRating=Max.
-games.showPrivateGames=Show private games
-games.view=View
-games.view.tiles=Tiles
-games.view.table=Table
+games.showPasswordProtectedGames=Show password protected games
+games.tiles.tooltip=Tiles
+games.table.tooltip=Table
+games.noGamesAvailable=There are no open games. Why don't you create one?
 
 game.create.map=Map
 game.create.title=Title (required)
@@ -182,6 +182,7 @@ game.access=Access
 game.tooltip.teamTitle=Team {0}
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
+game.protected.symbol=\uF023
 
 game.join.passwordPrompt=Password
 
