Support rehosting, closes #170

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -161,6 +161,7 @@ game.create.titleMissing=Title is missing
 game.create.connectivityCheckPending=Checking connectivity\u2026
 game.create.portUnreachable=Game port unreachable
 game.create.failed=Game could not be created.
+game.rehost.failed=Rehosting game failed.
 
 game.title=Title
 game.players=Players
