--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -241,6 +241,8 @@ modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
 modVault.upload.failed=Upload failed
 
+mapVault.loadingMaps=Loading maps\u2026
+
 mod.description=Description
 mod.comments=Comments
 
