Don't throw up on timeout

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -313,7 +313,7 @@ portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachab
 portCheckTask.neverShowAgain=Never show again
 portCheckTask.help=Help
 portCheckTask.retry=Retry
-portCheckTask.serverUnreachable=Port check server is down. Tell Downlord.
+portCheckTask.serverUnreachable=Port check failed
 
 missingGamePath.notification=Forged Alliance could not be located
 missingGamePath.locate=Locate\u2026
