--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -62,6 +62,8 @@ ranked1v1.searching=Searching for opponent\u2026
 ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.score=Score
 ranked1v1.rankingFormat=#{0,number,#}
+ranked1v1.notification.title=1v1 a ranked match is available
+ranked1v1.notification.message=Click here to open the 1v1 tab
 
 hub.concurrentFafUsers48h=Concurrent FAF users (most recent 48h)
 hub.upcomingEvents=Upcoming events
