--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -397,10 +397,10 @@ settings.chat.maxMessages=Maximum number of messages to buffer
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
-settings.chat.colorMode=Chat user color mode
-settings.chat.colorMode.custom=Custom
-settings.chat.colorMode.random=Random
-settings.chat.colorMode.default=Default
+settings.chat.colorMode=Chat color mode
+settings.chat.colorMode.default=Default: Use default colors for all users
+settings.chat.colorMode.custom=Custom: Define custom colors for single users
+settings.chat.colorMode.random=Random: Every user has an unique, random color
 settings.chat.miscellaneous=Miscellaneous options
 settings.chat.hideFoe=Hide foe messages
 settings.notifications=Notifications
