Fixes #193 broken live replay

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -370,8 +370,8 @@ replayServer.retry=Retry
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
 
-replayCouldNotBeStarted.title=Replay could not be started.
-replayCouldNotBeStarted.text=Replay {0} could not be started. See error message below.
+replayCouldNotBeStarted=Replay {0} could not be started. See error message below.
+liveReplayCouldNotBeStarted=Live replay could not be started. See error message below.
 replayCouldNotBeStarted.showLog=Show log file
 replayCouldNotBeDownloaded=Replay {0,number,#} could not be downloaded. See details below.
 
