--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -241,7 +241,26 @@ modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
 modVault.upload.failed=Upload failed
 
+mapVault.upload.title=Upload map
+mapVault.upload.hint=Values are read from *_scenario.lua
+mapVault.upload.mapVersion=Version
+mapVault.upload.reading=Reading map\u2026
+mapVault.upload=Upload map\u2026
+mapVault.upload.uploadNow=Upload now
+mapVault.upload.uploading=Uploading map\u2026
+mapVault.upload.complete=Upload complete!
+mapVault.upload.failed=Upload failed
 mapVault.loadingMaps=Loading maps\u2026
+mapVault.searchPrompt=Search\u2026
+mapVault.recommendedMap=Recommended maps
+mapVault.newestMaps=Newest maps
+mapVault.popularMaps=Popular maps
+mapVault.mostPlayedMaps=Most played maps
+mapVault.searchResult=Search result
+mapVault.install=Install
+mapVault.uninstall=Uninstall
+mapVault.upload.chooseDirectory=Choose map directory
+
 
 mod.description=Description
 mod.comments=Comments
@@ -255,6 +274,7 @@ map.downloads=Downloads
 map.creator=Creator
 map.players=Players
 map.version=Version
+map.reviews=Reviews
 
 mapPreview.name=Map Name: {0}
 mapPreview.size=Map Size: {0,number,#}km x {1,number,#}km
