Clean up #22 ranked match notification

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -62,7 +62,7 @@ ranked1v1.searching=Searching for opponent\u2026
 ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.score=Score
 ranked1v1.rankingFormat=#{0,number,#}
-ranked1v1.notification.title=1v1 a ranked match is available
+ranked1v1.notification.title=1v1 ranked match available
 ranked1v1.notification.message=Click here to open the 1v1 tab
 
 hub.concurrentFafUsers48h=Concurrent FAF users (most recent 48h)
@@ -414,6 +414,7 @@ settings.notifications.toastScreen=Screen
 settings.notifications.displayToast=Display toast
 settings.notifications.playSound=Play sound
 settings.notifications.pmReceived=PM received
+settings.notifications.ranked1v1=Ranked 1v1 available
 settings.sounds=Sounds
 settings.sounds.enable=Enable sounds
 settings.fa.title=Forged Alliance Forever
