Mod upload #177, no unit tests

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -5,6 +5,7 @@ report=Report
 errorDetails=Error details
 cancel=Cancel
 dismiss=Dismiss
+done=Done
 errorTitle=Uh oh!
 
 userMenu.logOut=Log out
@@ -225,6 +226,17 @@ modVault.couldNotDeleteMod=Mod '{0}' could not be deleted: {1}
 modVault.serverConnectionFailed=Connection to mod server failed
 modVault.searchResult=Search result
 modVault.loadingMods=Loading mods\u2026
+modVault.upload.choseDirectory=Choose mod directory
+modVault.upload=Upload mod\u2026
+modVault.upload.reading=Reading mod\u2026
+modVault.upload.title=Upload mod
+modVault.upload.hint=Values are read from mod_info.lua
+modVault.upload.modVersion=Version
+modVault.upload.modUid=UID
+modVault.upload.uploadNow=Upload now
+modVault.upload.uploading=Uploading mod\u2026
+modVault.upload.complete=Upload complete!
+modVault.upload.failed=Upload failed
 
 mod.description=Description
 mod.comments=Comments
