Issue #179 Introduce JoinGameHelper and extract funtionality from GamesController Refactor enter password dialog Dissolve dependencies on GamesController by introducing listeners

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -184,8 +184,8 @@ game.tooltip.teamTitle=Team {0}
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
 game.protected.symbol=\uF023
-
-game.join.passwordPrompt=Password
+game.join.passwordPrompt=Enter game password
+game.join.passwordWrong=The last password was incorrect.
 
 ladder.byRating=By rating
 ladder.byMap=By map
