Clean up code and replace jbsdiff by dependency, which is finally available on maven central

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -390,7 +390,9 @@ replayCouldNotBeDownloaded=Replay {0,number,#} could not be downloaded. See deta
 duration.seconds={0,number,#}s
 duration.minutesSeconds={0,number,#}min {0,number,#}s
 duration.hourMinutes={0,number,#}h {0,number,#}min
+# suppress inspection "TrailingSpacesInProperty"
 vsSeparator=\u0020vs\u0020
+# suppress inspection "TrailingSpacesInProperty"
 textSeparator=,\u0020
 datePattern=dd.MM.uuuu
 secondsAgo={0,number,#} seconds ago
