--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -135,6 +135,9 @@ chat.filter.gameStatus=Game Status
 chat.filter.gameStatus.playing=Playing
 chat.filter.gameStatus.lobby=In lobby
 chat.filter.gameStatus.none=None
+chat.operator=SYSTEM
+chat.privateMessage.playerLeft={0} is now offline
+chat.privateMessage.playerReconnect={0} is back online
 
 games.create=Create game
 games.create.minRating=Min.
@@ -442,3 +445,5 @@ settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - F
 urlPreviewDescription={0} ({1})
 
 achievement.unlockedTitle=Achievement unlocked!
+friend.nowOnlineNotification.title={0} is now online
+friend.nowOnlineNotification.action=Click here to start a conversation.
