--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -245,11 +245,18 @@ mapVault.upload.title=Upload map
 mapVault.upload.hint=Values are read from *_scenario.lua
 mapVault.upload.mapVersion=Version
 mapVault.upload.reading=Reading map\u2026
+mapVault.upload.isRanked=Ranked map
 mapVault.upload=Upload map\u2026
 mapVault.upload.uploadNow=Upload now
 mapVault.upload.uploading=Uploading map\u2026
 mapVault.upload.complete=Upload complete!
 mapVault.upload.failed=Upload failed
+mapVault.upload.mapSize=Size
+mapVault.upload.players=Players
+mapVault.upload.chooseDirectory=Choose map directory
+mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat={0,number,#}
+mapVault.upload.rankedConfirm=I confirm this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.loadingMaps=Loading maps\u2026
 mapVault.searchPrompt=Search\u2026
 mapVault.recommendedMap=Recommended maps
@@ -259,7 +266,6 @@ mapVault.mostPlayedMaps=Most played maps
 mapVault.searchResult=Search result
 mapVault.install=Install
 mapVault.uninstall=Uninstall
-mapVault.upload.chooseDirectory=Choose map directory
 
 
 mod.description=Description
@@ -275,6 +281,7 @@ map.creator=Creator
 map.players=Players
 map.version=Version
 map.reviews=Reviews
+map.updated=Updated
 
 mapPreview.name=Map Name: {0}
 mapPreview.size=Map Size: {0,number,#}km x {1,number,#}km
