--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -189,6 +189,7 @@ game.tooltip.observers=Observers
 game.protected.symbol=\uF023
 game.join.passwordPrompt=Enter game password
 game.join.passwordWrong=The last password was incorrect.
+game.start.couldNotStart=The game could not be started. See error details below.
 
 ladder.byRating=By rating
 ladder.byMap=By map
@@ -434,13 +435,18 @@ settings.sounds=Sounds
 settings.sounds.enable=Enable sounds
 settings.fa.title=Forged Alliance Forever
 settings.fa.autoDownloadMaps=Download missing maps automatically
+settings.fa.gamePort=Game port
+settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
+settings.fa.executableDecorator=Command line decoration for executable
+settings.fa.executionDirectory=Execution directory
+settings.fa.advanced=Advanced
+settings.fa.useDefault=Use default directory
+settings.fa.chooseDirectory=Choose\u2026
 settings.general.theme=Theme
 settings.notifications.friendOnline=Friend online
 settings.notifications.friendJoinsGame=Friend joins game
 settings.notifications.friendPlaysGame=Friend plays game
 settings.notifications.friendOffline=Friend offline
-settings.fa.gamePort=Game port
-settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
 
 urlPreviewDescription={0} ({1})
 
