--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -190,7 +190,7 @@ game.join.passwordPrompt=Enter game password
 game.join.passwordWrong=The last password was incorrect.
 game.start.couldNotStart=The game could not be started. See error details below.
 game.full=Game is full
-game.full.action=Please return to the ingame lobby.
+game.full.action=Click to open game
 
 ladder.byRating=By rating
 ladder.byMap=By map
