Fix map upload & add progress

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -7,6 +7,7 @@ cancel=Cancel
 dismiss=Dismiss
 done=Done
 errorTitle=Uh oh!
+bytesProgress={0} of {1}
 
 userMenu.logOut=Log out
 currentUser.showProfile=Show profile
