Refresh map vault Fixes #314

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -269,6 +269,7 @@ mapVault.mostPlayedMaps=Most played maps
 mapVault.searchResult=Search result
 mapVault.install=Install
 mapVault.uninstall=Uninstall
+mapVault.refresh=Refresh
 
 
 mod.description=Description
