--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -254,13 +254,14 @@ mapVault.upload.uploadNow=Upload now
 mapVault.upload.uploading=Uploading map\u2026
 mapVault.upload.compressing=Compressing map\u2026
 mapVault.upload.complete=Upload complete!
-mapVault.upload.failed=Upload failed
+mapVault.upload.failed=Map could not be uploaded. Server gave the following errors:\n\n{0}
 mapVault.upload.mapSize=Size
 mapVault.upload.players=Players
 mapVault.upload.chooseDirectory=Choose map directory
 mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.playersFormat={0,number,#}
 mapVault.upload.rankedConfirm=I confirm this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
+mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps\u2026
 mapVault.searchPrompt=Search\u2026
 mapVault.recommendedMap=Recommended maps
