Don't move corrupt mods. Doesn't help, but just hindered IceDreamer

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -414,7 +414,7 @@ achievements.sortBy=Sort by
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
-corruptedMods.notification=You had corrupted mods installed. They were moved to a separate directory for your convenience. See the log files for details.
+corruptedMods.notification=Mod is corrupt and can't be loaded: {0}.
 corruptedMods.show=Show
 
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
