Fix #247 process notice

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -8,6 +8,7 @@ dismiss=Dismiss
 done=Done
 errorTitle=Uh oh!
 bytesProgress={0} of {1}
+messageFromServer=Message from server
 
 userMenu.logOut=Log out
 currentUser.showProfile=Show profile
