Fix #148 friend join notification

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -488,3 +488,5 @@ urlPreviewDescription={0} ({1})
 achievement.unlockedTitle=Achievement unlocked!
 friend.nowOnlineNotification.title={0} is now online
 friend.nowOnlineNotification.action=Click here to start a conversation.
+friend.joinedGameNotification.title={0} joined {1}
+friend.joinedGameNotification.action=Click here to join as well.
