Fix #178 avatar selection

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -12,6 +12,10 @@ messageFromServer=Message from server
 
 userMenu.logOut=Log out
 currentUser.showProfile=Show profile
+avatar.button.save=Select
+avatar.selection.title=Select avatar
+avatar.selection.loading=Loading avatars
+avatar.selection.description=These are the avatars available to you. Select the one you'd like to be displayed.
 
 menu.login=Login
 menu.connect=Connect
@@ -107,6 +111,7 @@ chat.category.friends=Friends
 chat.category.foes=Foes
 chat.category.others=Others
 chat.category.chatOnly=Chat only
+chat.userContext.noAvatar=No avatar
 chat.userContext.userInfo=Show user info
 chat.userContext.privateMessage=Send private message
 chat.userContext.removeColor=Remove custom color
