--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -370,6 +370,7 @@ portCheckTask.neverShowAgain=Never show again
 portCheckTask.help=Help
 portCheckTask.retry=Retry
 portCheckTask.serverUnreachable=Port check failed
+portCheckTask.portOccupied=Your game port {0} is occupied. Do you have another client running?
 
 missingGamePath.notification=Forged Alliance could not be located
 missingGamePath.locate=Locate\u2026
