--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -238,7 +238,7 @@ modVault.couldNotDeleteMod=Mod '{0}' could not be deleted: {1}
 modVault.serverConnectionFailed=Connection to mod server failed
 modVault.searchResult=Search result
 modVault.loadingMods=Loading mods\u2026
-modVault.upload.choseDirectory=Choose mod directory
+modVault.upload.chooseDirectory=Choose mod directory
 modVault.upload=Upload mod\u2026
 modVault.upload.reading=Reading mod\u2026
 modVault.upload.title=Upload mod
@@ -249,6 +249,7 @@ modVault.upload.uploadNow=Upload now
 modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
 modVault.upload.failed=Upload failed
+modVault.upload.compressing=Compressing map\u2026
 
 mapVault.upload.title=Upload map
 mapVault.upload.hint=Values are read from *_scenario.lua
@@ -266,7 +267,7 @@ mapVault.upload.players=Players
 mapVault.upload.chooseDirectory=Choose map directory
 mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.playersFormat={0,number,#}
-mapVault.upload.rankedConfirm=I confirm this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
+mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps\u2026
 mapVault.searchPrompt=Search\u2026
