--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -40,6 +40,7 @@ main.vault.mods=Mods
 main.vault.replays=Replays
 main.leaderboard=Leaderboard
 main.leaderboard.ranked1v1=1v1 ranked matches
+main.units=Units
 
 leaderboard.failedToLoad=Leaderboard could not be loaded
 leaderboard.loading=Loading leaderboard\u2026
