Fix #395 mod upload errors

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -250,6 +250,7 @@ modVault.upload.uploadNow=Upload now
 modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
 modVault.upload.failed=Upload failed
+modVault.upload.retry=Retry
 modVault.upload.compressing=Compressing map\u2026
 
 mapVault.upload.title=Upload map
