List mod upload error messages from server

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -249,7 +249,7 @@ modVault.upload.modUid=UID
 modVault.upload.uploadNow=Upload now
 modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
-modVault.upload.failed=Upload failed
+modVault.upload.failed=Mod upload failed. Server gave the following errors:\n\n{0}
 modVault.upload.retry=Retry
 modVault.upload.compressing=Compressing map\u2026
 
