Clean up messages a bit

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -12,10 +12,6 @@ messageFromServer=Message from server
 
 userMenu.logOut=Log out
 currentUser.showProfile=Show profile
-avatar.button.save=Select
-avatar.selection.title=Select avatar
-avatar.selection.loading=Loading avatars
-avatar.selection.description=These are the avatars available to you. Select the one you''d like to be displayed.
 
 menu.login=Login
 menu.connect=Connect
@@ -61,7 +57,7 @@ ranked1v1.ratingHint.low=Your rating is low. Ask for a trainer to get started wi
 ranked1v1.ratingHint.moderate=Your rating is moderate. Keep learning the game mechanics to improve.
 ranked1v1.ratingHint.good=Your rating is good. Focus on details to improve.
 ranked1v1.ratingHint.high=Your rating is high. Why not help others to improve?
-ranked1v1.ratingHint.top=Congratulations! You''re a top player. Share your knowledge.
+ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowledge.
 ranked1v1.gamesPlayed=Games played
 ranked1v1.ranking=Your ranking
 ranked1v1.rankingOutOf=out of {0,number,#} players
@@ -153,7 +149,7 @@ games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show password protected games
 games.tiles.tooltip=Tiles
 games.table.tooltip=Table
-games.noGamesAvailable=There are no open games. Why don''t you create one?
+games.noGamesAvailable=There are no open games. Why don't you create one?
 games.couldNotJoin=Game could not be joined. See error message below.
 
 game.create.map=Map
@@ -226,7 +222,7 @@ vault.replays=Replays
 
 modVault.searchPrompt=Search\u2026
 modVault.title=Mod vault
-modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game''s logic and therefore need to be installed by all participants. They can only be used in custom games.
+modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game's logic and therefore need to be installed by all participants. They can only be used in custom games.
 modVault.newestMods=Newest mods
 modVault.popularMods=Popular mods
 modVault.mostLikedMods=Most liked mods
@@ -251,7 +247,7 @@ modVault.upload.uploading=Uploading mod\u2026
 modVault.upload.complete=Upload complete!
 modVault.upload.failed=Mod upload failed. Server gave the following errors:\n\n{0}
 modVault.upload.retry=Retry
-modVault.upload.compressing=Compressing map\u2026
+modVault.upload.compressing=Compressing mod\u2026
 
 mapVault.upload.title=Upload map
 mapVault.upload.hint=Values are read from *_scenario.lua
@@ -269,7 +265,7 @@ mapVault.upload.players=Players
 mapVault.upload.chooseDirectory=Choose map directory
 mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.playersFormat={0,number,#}
-mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I''m aware that a violation results in a ban. Unchecking this results in an unranked map.
+mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps\u2026
 mapVault.searchPrompt=Search\u2026
@@ -381,7 +377,7 @@ missingGamePath.chooserTitle=Locate Forged Alliance directory
 
 loadingInstalledModsFailed.notification=Installed mods could not be determined: {0}
 loadingInstalledModsFailed.retry=Retry
-notifications.empty=You don''t have any notifications
+notifications.empty=You don't have any notifications
 
 stats.air=Air
 stats.land=Land
@@ -408,14 +404,12 @@ userInfo.ratingOverTime=Rating over time
 userInfo.ratingOverTime.last3Months=Last 3 months
 userInfo.ratingOverTime.lastYear=Last year
 userInfo.achievements=Achievements
-userInfo.googleConnectionRequired=This feature is only available for testers. Ask Downlord if you''d like to participate.\nMax 50 testers allowed.
-userInfo.notUsingClient=This player is not using Downlord''s FAF client. Why don''t you tell him about it?
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
 achievements.mostRecent=Most recent
-achievements.onlyForTesters=This feature is only available for testers. Ask Downlord if you''d like to participate.
+achievements.onlyForTesters=This feature is only available for testers. Ask Downlord if you'd like to participate.
 achievements.loading=Loading achievements\u2026
 achievements.unlocked=Unlocked ({0,number,#})
 achievements.locked=Open ({0,number,#})
