Add refresh button for mods

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -248,6 +248,7 @@ modVault.upload.complete=Upload complete!
 modVault.upload.failed=Mod upload failed. Server gave the following errors:\n\n{0}
 modVault.upload.retry=Retry
 modVault.upload.compressing=Compressing mod\u2026
+modVault.refresh=Refresh
 
 mapVault.upload.title=Upload map
 mapVault.upload.hint=Values are read from *_scenario.lua
