Show hint after map upload

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -260,6 +260,7 @@ mapVault.upload.uploadNow=Upload now
 mapVault.upload.uploading=Uploading map\u2026
 mapVault.upload.compressing=Compressing map\u2026
 mapVault.upload.complete=Upload complete!
+mapVault.upload.complete.hint=WARNING: Since the server may rename your files, it's strongly recommended that you install your uploaded map using the map vault.
 mapVault.upload.failed=Map could not be uploaded. Server gave the following errors:\n\n{0}
 mapVault.upload.mapSize=Size
 mapVault.upload.players=Players
