Fix #401 display total team rating

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -186,7 +186,7 @@ game.join=Join
 game.cancel=Cancel
 game.host=Host
 game.access=Access
-game.tooltip.teamTitle=Team {0}
+game.tooltip.teamTitle=Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
 game.protected.symbol=\uF023
